--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ ul {
   padding: 0;
 }
 .title {
-  font-size: 50px;
+  font-size: clamp(25px, 5vw, 50px);
+
   line-height: 120%;
   font-family: 'DM Sans', Sans-serif;
   font-weight: 700;
@@ -45,13 +46,50 @@ ul {
   margin: 0;
   padding: 0;
 }
+.header-nav-content {
+  display: flex;
+  align-items: center;
+  /* width: 100%; */
+  flex: 1;
+  justify-content: space-around;
+}
+.nav-lang {
+  display: flex;
+  gap: 20px;
+  border: 2px solid white;
+  padding: 10px;
+  border-radius: 30px;
+}
+.nav-lang-link {
+  text-decoration: none;
+  width: 20px;
+  height: 20px;
+  color: #ffffff;
+  font-weight: 700;
+}
+.active-lang {
+  color: #e77000;
+  position: relative;
+}
+.active-lang::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 230%; /* В 2 рази більше */
+  height: 230%; /* В 2 рази більше */
+  background-color: #ffffff; /* Колір кола */
+  border-radius: 50%; /* Робимо його круглим */
+  z-index: -1;
+}
 .nav-list-item {
   list-style: none;
   padding: 40px 0px 40px 0px;
 }
 .nav-link {
   font-family: 'DM Sans', Sans-serif;
-  font-size: 16px;
+  font-size: clamp(14px, 1vw, 16px);
   font-weight: 500;
   text-transform: uppercase;
   line-height: 30px;
@@ -96,7 +134,7 @@ ul {
   width: 100%; /* Займає ширину контейнера */
   height: 100%; /* Займає висоту контейнера */
   background: #e77000;
-  clip-path: polygon(100% 0, 100% 75%, 40% 0);
+  clip-path: polygon(100% 0, 100% 85%, 25% 0);
 }
 
 .hero-content {
@@ -112,21 +150,21 @@ ul {
 .hero-title {
   font-family: 'DM Sans', Sans-serif;
   font-size: 72px;
+  font-size: clamp(36px, 5vw, 72px);
   font-weight: 700;
   line-height: 110%;
   color: #ffffff;
   letter-spacing: 5px;
-  margin-bottom: 30px;
+  margin-bottom: 50px;
 }
 .hero-img {
-  width: 55%;
+  width: 40%;
   position: absolute;
   min-width: 700px;
   right: 0;
-  bottom: -50px;
+  bottom: -100px;
 }
-.hero-btn {
-}
+
 .btn {
   background-color: #e77000;
   border: none;
@@ -137,7 +175,24 @@ ul {
   font-size: 12px;
   cursor: pointer;
 }
-
+.hero-btn {
+  background: linear-gradient(to right, #e77000 50%, #ffffff 50%);
+  border: none;
+  padding: 20px 40px;
+  text-transform: uppercase;
+  color: white; /* Початковий колір тексту */
+  font-weight: 600;
+  font-size: 12px;
+  cursor: pointer;
+  background-size: 200%; /* Збільшений фон для ефекту зміщення */
+  transition: background-position 0.5s ease, color 0.5s ease;
+  text-decoration: none;
+  display: inline-block;
+}
+.hero-btn:hover {
+  background-position: -100%; /* Зміщення градієнта */
+  color: #000000; /* Змінюємо колір тексту */
+}
 /* OFFER SECTION*/
 .offer {
   background-color: #f7f5ef;
@@ -298,6 +353,7 @@ ul {
   justify-content: center;
   align-items: center;
   height: 25vw !important;
+  min-height: 350px;
   background-size: cover;
   background-position: center;
   position: relative;
@@ -384,8 +440,13 @@ ul {
 }
 .feedback-btn {
   z-index: 2;
+  background: linear-gradient(to right, #e77000 50%, #232331 50%);
+  background-size: 201%; /* Збільшений фон для ефекту зміщення */
+  transition: background-position 0.5s ease, color 0.5s ease;
 }
-
+.feedback-btn:hover {
+  background-position: -100%;
+}
 /* OPPORTUNITY SECTION*/
 .opportunity {
   padding-top: 150px;
@@ -394,14 +455,16 @@ ul {
 }
 .opportunity-contact {
   display: flex;
-  width: 1000px;
+  max-width: 1000px;
+  width: 80vw;
   background-color: #e77000;
   margin: auto;
   align-items: center;
   padding: 20px 50px;
   justify-content: space-between;
   position: absolute;
-  left: calc(50% - 550px);
+  left: 50%; /* Центрування по горизонталі */
+  transform: translateX(-50%);
   top: 50px;
 }
 .opportunity-contact-descript {
@@ -494,7 +557,6 @@ ul {
 /*FOOTER SECTION*/
 .footer {
   background-color: #232331;
-  padding-top: 100px;
 }
 .footer-wrapper {
   max-width: 1200px;
@@ -582,6 +644,15 @@ ul {
   font-weight: 700;
   font-size: 32px;
   margin-left: -15px;
+}
+.footer-compant-btn {
+  background: linear-gradient(to right, #e77000 50%, #ffffff 50%);
+  background-size: 200%; /* Збільшений фон для ефекту зміщення */
+  transition: background-position 0.5s ease, color 0.5s ease;
+}
+.footer-compant-btn:hover {
+  background-position: -100%; /* Зміщення градієнта */
+  color: #000000; /* Змінюємо колір тексту */
 }
 .footer-section-title {
   color: #ffffff;
@@ -691,4 +762,186 @@ ul {
 }
 .footer-media-link:hover svg {
   fill: #e77000; /* Колір при наведенні */
+}
+
+/* MODAL */
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  justify-content: center;
+  align-items: center;
+  animation: fadeIn 0.5s forwards; /* Animation for modal */
+  z-index: 1111;
+}
+
+.modal-content {
+  background-color: #e77000;
+  padding: 40px;
+  border-radius: 8px;
+  width: 90%;
+  max-width: 450px;
+  color: white;
+  position: relative;
+  box-sizing: border-box;
+  opacity: 0; /* Initially invisible */
+  transform: translateY(-20px); /* Start position */
+  animation: slideDown 0.5s forwards; /* Animation for content */
+}
+.modal.show .modal-content {
+  opacity: 1;
+  transform: translateY(0); /* Final position */
+}
+.modal-content h2 {
+  margin-top: 0;
+  text-align: start;
+  font-size: 1.95rem;
+}
+
+.modal-content label {
+  display: block;
+  margin-top: 10px;
+  font-size: 14px;
+}
+
+.modal-content input,
+.modal-content select {
+  width: 100%;
+  padding: 20px;
+  margin-top: 5px;
+  border: none;
+  border-radius: 4px;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.close-btn {
+  position: absolute;
+  top: 0;
+  right: 20px; /* Button on the top left */
+  font-size: 46px;
+  cursor: pointer;
+}
+
+/* Form row styling */
+.form-rows {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.form-row {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 20px;
+}
+
+.form-group {
+  flex: 1;
+}
+
+.submit {
+  align-self: center;
+  background-color: #232331;
+}
+
+@keyframes fadeIn {
+  from {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  to {
+    background-color: rgba(0, 0, 0, 0.7);
+  }
+}
+
+/* Slide-down animation for modal content */
+@keyframes slideDown {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* MEDIA 1150 */
+@media (max-width: 1150px) {
+  .nav-link {
+    padding: 0px 20px 0px 10px;
+    text-wrap: nowrap;
+  }
+  .hero {
+    padding-top: 120px;
+  }
+  .hero-info {
+    width: 60%;
+  }
+  .hero-img {
+    width: 35%;
+    min-width: 400px;
+    bottom: 0;
+  }
+  .about {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .about-img-container {
+    margin-right: 40px;
+    width: auto;
+    margin-left: 0px;
+  }
+  .about-content {
+    width: auto;
+  }
+  .about-info {
+    padding-bottom: 100px;
+  }
+  .logo-img {
+    max-height: 70px;
+  }
+  .logo-text {
+    margin-left: -20px;
+    font-size: 22px;
+  }
+  .offer-content {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .offer-cards {
+    width: 70%;
+  }
+  .card {
+    flex: 1;
+  }
+  .card-footer {
+    padding: 20px;
+  }
+  .footer-content {
+    padding-left: 20px;
+    padding-right: 20px;
+    column-gap: 10px;
+    flex-wrap: wrap;
+  }
+  .footer-company {
+    flex: 0 0 45%;
+  }
+  .footer-services {
+    flex: 0 0 45%;
+  }
+  .footer-links {
+    flex: 0 0 45%;
+  }
+  .footer-newsletter {
+    flex: 0 0 45%;
+  }
+  .footer-policy-wrapper {
+    justify-content: space-evenly;
+  }
 }
