--- a/about.css
+++ b/about.css
@@ -230,7 +230,7 @@ ul {
   align-items: center;
 }
 .about-us-content {
-  width: 50%;
+  flex: 1;
   display: flex;
   flex-direction: column;
   row-gap: 30px;
@@ -280,15 +280,38 @@ ul {
   font-size: clamp(0.6rem, 3vw, 1rem);
 }
 .about-us-img-container {
-  width: 50%;
+  flex: 1;
   position: relative;
   max-height: fit-content;
   margin-left: 5%;
+}
+.about-us-img-container::before {
+  position: absolute;
+  content: '';
+  height: 30%;
+  width: 20px;
+  left: -30px;
+  top: 0;
+  border-radius: 10px;
+  background-color: #e77000;
+}
+.about-us-img-container::after {
+  position: absolute;
+  content: '';
+  height: 20%;
+  width: 12%;
+  left: -30px;
+  bottom: -25px;
+  border-radius: 10px;
+  background-color: #e77000;
+  z-index: -1;
+  left: 50%;
 }
 .about-us-big-img {
   max-width: 90%;
   border-radius: 5px;
 }
+
 .about-us-small-img {
   position: absolute;
   max-height: 60%;
@@ -336,7 +359,7 @@ ul {
   text-align: center;
   font-family: 'DM Sans', Sans-serif;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: clamp(1rem, 3vw, 1.25rem);
   line-height: 140%;
 }
 .choose-us-card-img {
@@ -853,6 +876,7 @@ ul {
     flex-direction: column;
     row-gap: 10px;
     box-sizing: border-box;
+    top: -200px;
   }
   .opportunity-contact-descript {
     width: auto;
@@ -862,6 +886,22 @@ ul {
   .opportunity-contact-info {
     width: auto;
     align-items: center;
+  }
+  .about-us-container {
+    flex-direction: column-reverse;
+    padding: 0 50px;
+  }
+  .about-us-arrow {
+    min-height: 300px;
+  }
+  .choose-card-container {
+    flex-wrap: wrap;
+    gap: 20px;
+    /* align-items: center; */
+    justify-content: center;
+  }
+  .choose-us-card {
+    flex: 0 0 40%;
   }
 }
 
@@ -881,6 +921,9 @@ ul {
     padding-left: 10px;
     padding-right: 10px;
   }
+  .feedback-content {
+    padding-top: 150px;
+  }
   .card-footer-img {
     width: 35px;
     height: 35px;
@@ -893,6 +936,18 @@ ul {
   }
   .logo-text {
     font-size: 18px;
+  }
+  .about-hero {
+    height: 40vh;
+  }
+  .choose-us-card {
+    flex: 0 0 70%;
+  }
+  .about-us-img-container::after {
+    content: none;
+  }
+  .about-us-img-container::before {
+    content: none;
   }
 }
 /* * {
