--- a/services.css
+++ b/services.css
@@ -196,8 +196,9 @@ ul {
   margin-left: -35px;
   margin-right: 35px;
 }
-/* ABOUT SECTION */
-.about-hero {
+
+/* SERVICE SECTION */
+.services-hero {
   background-image: url(./src/img/about-bg.jpg);
   height: 60vh;
   background-size: cover;
@@ -206,7 +207,7 @@ ul {
   align-items: center;
 }
 
-.about-title {
+.services-title {
   color: #ffffff;
   font-size: clamp(36px, 4vw, 72px);
   font-weight: 700;
@@ -216,35 +217,45 @@ ul {
   width: 100%;
   padding-left: 40px;
 }
-
-/* ABOUT US SECTION*/
-.about-us {
-  margin-bottom: 150px;
+.our-services {
   position: relative;
 }
-.about-us-container {
-  display: flex;
-  margin-top: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
-  align-items: center;
+.our-services-wrapper {
+  position: relative;
+  z-index: 2;
 }
-.about-us-content {
-  flex: 1;
+.our-services-card-info {
+  position: relative;
+  z-index: 2;
+}
+.our-services:before {
+  content: '';
+  position: absolute;
+  inset: 0;
+  background: url('./src/img/services-bg.png');
+  background-position: calc(20px);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: 1; /* Забезпечує, що картинка буде поверх */
+}
+
+.our-services-title {
+  color: #e77000;
+}
+.our-services-descript {
+  font-weight: 500;
+}
+.our-services-card-info {
   display: flex;
   flex-direction: column;
-  row-gap: 30px;
-  margin-top: 30px;
+  align-items: center;
+  margin-top: 150px;
+  padding-top: 50px;
 }
-.about-us-title {
-  margin: 0;
-}
-.about-us-label {
-  align-self: flex-start;
-}
-.about-us-label::before {
+.our-services-card-label::before {
   content: '';
   top: -20px;
+  left: calc(50% - (35% / 2));
   position: absolute;
   width: 35%;
   height: 5px;
@@ -255,117 +266,77 @@ ul {
     rgba(231, 112, 0, 0.7) 100%
   );
 }
-.about-us-descript {
-  color: #e77000;
-  font-weight: 700;
-  font-size: clamp(1.1rem, 3vw, 1.5rem);
-  margin: 0;
+.our-services-card-container {
+  background-color: #f7f5ef;
+  padding-bottom: 50px;
 }
-.about-us-info {
-  margin: 0;
-  color: #767676;
-  font-weight: 400;
-  font-family: 'Poppins', serif;
-  font-size: clamp(0.6rem, 3vw, 1rem);
-}
-.about-us-our-title {
-  color: #e77000;
-  font-weight: 700;
-  font-size: clamp(1.1rem, 3vw, 1.5rem);
-}
-.about-us-our-descript {
-  color: #767676;
-  font-weight: 400;
-  font-family: 'Poppins', serif;
-  font-size: clamp(0.6rem, 3vw, 1rem);
-}
-.about-us-img-container {
-  flex: 1;
-  position: relative;
-  max-height: fit-content;
-  margin-left: 5%;
-}
-.about-us-img-container::before {
-  position: absolute;
-  content: '';
-  height: 30%;
-  width: 20px;
-  left: -30px;
-  top: 0;
-  border-radius: 10px;
-  background-color: #e77000;
-}
-.about-us-img-container::after {
-  position: absolute;
-  content: '';
-  height: 20%;
-  width: 12%;
-  left: -30px;
-  bottom: -25px;
-  border-radius: 10px;
-  background-color: #e77000;
-  z-index: -1;
-  left: 50%;
-}
-.about-us-big-img {
-  max-width: 90%;
-  border-radius: 5px;
+.swiper {
+  width: 100%;
+  height: 100%;
 }
 
-.about-us-small-img {
-  position: absolute;
-  max-height: 60%;
-  left: -10%;
-  bottom: -10%;
-  border-radius: 5px;
-}
-.about-us-arrow {
-  position: absolute;
-  /* bottom: 0; */
-  top: 100%;
-  right: 5vw;
-  /* max-width: 100%; */
-  max-height: 30vw;
-  min-height: 400px;
-}
-/* CHOOSE US SECTION*/
-.choose-us {
-  background-color: #f7f5ef;
-  padding-top: 50px;
-  padding-bottom: 100px;
-}
-.choose-us-title {
+.swiper-slide {
   text-align: center;
-  color: #e77000;
-}
-.choose-card-container {
+  font-size: clamp(14px, 4vw, 18px);
+  background: #fff;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  align-items: center;
+  height: 25vw !important;
+  min-height: 350px;
+  background-size: cover;
+  background-position: center;
+  position: relative;
+  border-radius: 10px;
 }
-.choose-us-card {
+
+.swiper-slide::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 40%;
+  bottom: 0;
+  left: 0;
+  background-image: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.85) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+}
+
+.services-card-img {
+  width: 50px;
+  position: absolute;
+  left: 0;
+  top: 0;
   background-color: #ffffff;
   padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 130px;
-  height: 150px;
-  border-radius: 10px;
-  z-index: 2;
+  border-bottom-right-radius: 10px;
+  border-top-left-radius: 10px;
 }
-.choose-us-card-text {
-  text-align: center;
-  text-align: center;
-  font-family: 'DM Sans', Sans-serif;
+
+.services-card-info {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  text-align: start;
+}
+
+.services-card-category {
+  color: #e77000;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.services-card-descript {
+  font-size: 1.5rem;
+  color: #ffffff;
   font-weight: 700;
-  font-size: clamp(1rem, 3vw, 1.25rem);
-  line-height: 140%;
+  margin: 0;
 }
-.choose-us-card-img {
-  width: 70px;
-  height: 70px;
-}
+
 /* FEEDBACK SECTION*/
 .opportunity-contact {
   display: flex;
@@ -387,9 +358,9 @@ ul {
   width: 40%;
 }
 .opportunity-contact-img {
-  width: 45px;
-  height: 45px;
-  background-color: #ffffff;
+  width: 100px;
+  height: 100px;
+  background-color: #e77000;
   padding: 20px;
   /* border-radius: 50%; */
   clip-path: circle(50% at 50% 50%);
@@ -410,7 +381,7 @@ ul {
 }
 .feedback {
   margin-top: 150px;
-  background-image: url('./src/img/feedback-bg.jpg');
+  background-image: url('./src/img/fleet.jpg');
   background-position: center;
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.5);
@@ -453,6 +424,7 @@ ul {
 .feedback-btn:hover {
   background-position: -100%;
 }
+
 /*FOOTER SECTION*/
 .footer {
   background-color: #232331;
@@ -666,7 +638,6 @@ ul {
 .footer-media-link:hover svg {
   fill: #e77000; /* Колір при наведенні */
 }
-
 /* MODAL */
 
 .modal {
@@ -776,7 +747,6 @@ ul {
     transform: translateY(0);
   }
 }
-
 @media (max-width: 1150px) {
   .nav-link {
     padding: 0px 20px 0px 10px;
@@ -869,10 +839,6 @@ ul {
     flex: 0 0 90%;
   }
 
-  .card {
-    width: 80%;
-    margin: auto;
-  }
   .opportunity-contact {
     flex-direction: column;
     row-gap: 10px;
@@ -888,24 +854,7 @@ ul {
     width: auto;
     align-items: center;
   }
-  .about-us-container {
-    flex-direction: column-reverse;
-    padding: 0 50px;
-  }
-  .about-us-arrow {
-    min-height: 300px;
-  }
-  .choose-card-container {
-    flex-wrap: wrap;
-    gap: 20px;
-    /* align-items: center; */
-    justify-content: center;
-  }
-  .choose-us-card {
-    flex: 0 0 40%;
-  }
 }
-
 @media (max-width: 500px) {
   .footer-policy-wrapper {
     flex-wrap: wrap;
@@ -929,32 +878,16 @@ ul {
     width: 35px;
     height: 35px;
   }
-  .about-img-big {
-    max-width: 250px;
-  }
   .logo-img {
     max-height: 50px;
   }
   .logo-text {
     font-size: 18px;
   }
-  .about-hero {
-    height: 40vh;
-  }
-  .choose-us-card {
-    flex: 0 0 70%;
-  }
-
-  .about-us-img-container::before {
-    width: 10px;
-  }
-  .about-us-arrow {
-    min-height: 250px;
-  }
 }
 /* * {
-   border: 1px solid red;
- } */
+    border: 1px solid red;
+  } */
 ::-webkit-scrollbar {
   width: 6px; /* Ширина скролбару */
 }
