--- a/services.css
+++ b/services.css
@@ -26,7 +26,7 @@ ul {
   font-weight: 700;
 }
 .semi-title {
-  font-size: clamp(1.45rem, 3vw, 1.95rem);
+  font-size: clamp(1.15rem, 3vw, 1.95rem);
   line-height: 130%;
   font-family: 'DM Sans', Sans-serif;
   font-weight: 700;
@@ -223,6 +223,8 @@ ul {
 .our-services-wrapper {
   position: relative;
   z-index: 2;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .our-services-card-info {
   position: relative;
@@ -748,6 +750,16 @@ ul {
   }
 }
 @media (max-width: 1150px) {
+  .our-services:before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: url('./src/img/services-bg.png');
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 1; /* Забезпечує, що картинка буде поверх */
+  }
   .nav-link {
     padding: 0px 20px 0px 10px;
     text-wrap: nowrap;
@@ -838,12 +850,15 @@ ul {
   .footer-newsletter {
     flex: 0 0 90%;
   }
-
+  .feedback {
+    margin-top: 180px;
+  }
   .opportunity-contact {
     flex-direction: column;
     row-gap: 10px;
     box-sizing: border-box;
     top: -200px;
+    width: 100%;
   }
   .opportunity-contact-descript {
     width: auto;
