--- a/services.css
+++ b/services.css
@@ -235,17 +235,27 @@ ul {
   position: absolute;
   inset: 0;
   background: url('./src/img/services-bg.png');
-  background-position: calc(20px);
+  background-position-x: 200px;
+  background-position-y: 250px;
   background-repeat: no-repeat;
   background-size: contain;
   z-index: 1; /* Забезпечує, що картинка буде поверх */
 }
 
 .our-services-title {
-  color: #e77000;
+  /* color: #e77000; */
 }
 .our-services-descript {
-  font-weight: 500;
+  color: #e77000;
+  max-width: 70%;
+}
+.our-services-text {
+  color: #767676;
+  font-weight: 400;
+  font-family: 'Poppins', serif;
+  font-size: clamp(0.6rem, 3vw, 1rem);
+  max-width: 70%;
+  margin-top: 50px;
 }
 .our-services-card-info {
   display: flex;
@@ -345,6 +355,10 @@ ul {
   max-width: 1000px;
   width: 80vw;
   background-color: #e77000;
+  background-image: url('./src/img/box.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
   margin: auto;
   align-items: center;
   padding: 20px 50px;
@@ -388,7 +402,7 @@ ul {
   background-size: cover;
   background-color: rgba(0, 0, 0, 0.5);
   position: relative;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 .feedback::before {
   content: '';
@@ -750,7 +764,7 @@ ul {
   }
 }
 @media (max-width: 1150px) {
-  .our-services:before {
+  /* .our-services:before {
     content: '';
     position: absolute;
     inset: 0;
@@ -758,8 +772,8 @@ ul {
     background-position: top;
     background-repeat: no-repeat;
     background-size: contain;
-    z-index: 1; /* Забезпечує, що картинка буде поверх */
-  }
+    z-index: 1; 
+  } */
   .nav-link {
     padding: 0px 20px 0px 10px;
     text-wrap: nowrap;
@@ -838,8 +852,23 @@ ul {
   .card-footer {
     border-right: none;
   }
+  .our-services-descript {
+    max-width: 100%;
+  }
+  .our-services-text {
+    max-width: 100%;
+  }
+  .our-services::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background: url('./src/img/services-bg.png');
+    background-position-y: 50px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    z-index: 1; /* Забезпечує, що картинка буде поверх */
+  }
 }
-
 @media (max-width: 650px) {
   .footer-content {
     justify-content: start;
@@ -852,13 +881,13 @@ ul {
   }
   .feedback {
     margin-top: 180px;
+    margin-bottom: 50px;
   }
   .opportunity-contact {
     flex-direction: column;
     row-gap: 10px;
     box-sizing: border-box;
     top: -200px;
-    width: 100%;
   }
   .opportunity-contact-descript {
     width: auto;
@@ -868,6 +897,9 @@ ul {
   .opportunity-contact-info {
     width: auto;
     align-items: center;
+  }
+  .our-services-card-info {
+    margin-top: 50px;
   }
 }
 @media (max-width: 500px) {
