--- a/contact.css
+++ b/contact.css
@@ -606,6 +606,11 @@ ul {
 .footer-media-link:hover svg {
   fill: #e77000; /* Колір при наведенні */
 }
+
+.no-scroll {
+  overflow: hidden;
+}
+
 @keyframes fadeIn {
   from {
     background-color: rgba(0, 0, 0, 0);
@@ -774,6 +779,12 @@ ul {
   }
   .logo-text {
     font-size: 18px;
+  }
+}
+@media (max-width: 400px) {
+  .contact-us-card {
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 /* * {
